# ChorePlanner

./: .gitignore  CLAUDE.md  pyproject.toml  tui.py
scripts/: delete_by_name.py  delete_events.py  fetch_by_ical.py  fetch_events.py
src/: __init__.py  db.py  main.py
src/api/routers/: calendar_events.py  chores.py
src/chores_planner/migrations/: 0001_initial.py  0002_auto_20260228_1113.py  0003_auto_20260301_1547.py  0004_auto_20260301_1613.py  0005_auto_20260301_1641.py  env.py
src/chores_planner/migrations/versions/: 0001_create_chores_calendarevents_564450e8dca4.py  0002_alter_chores_1ae95d98faa7.py  0003_create_assingee_add_relation__c1aa53fea8a7.py  0004_create_collection_add_relation__eaf30ab4500c.py
src/chores_planner/models/: __init__.py  assignee.py  calendar_event.py  chore.py  collection.py
src/chores_planner/serializers/: calendar_event.py  chore.py
src/chores_planner/services/: chore.py  google_calendar.py
tests/: conftest.py  test_api_calendar_events.py  test_api_chores.py  test_google_calendar_service.py  test_google_calendar_service_status.py
